--- a/app.json
+++ b/app.json
@@ -6,11 +6,11 @@
  "env": {
   "BOT_TOKEN": {
       "description": "Your Bot token from @Botfather",
-      "value": ""
+      "value": "5384496029:AAFr2IMxYpqE9MuGlNLmHlWu4BfTz5kEEIA"
    },
    "API_ID": {
       "description": "Your API_ID from https://my.telegram.org/apps . Use your own API ID ",
-      "value": ""
+      "value": "16217296"
    },
    "API_HASH": {
       "description": "Your API_HASH from https://my.telegram.org/apps . Use your own API HASH",
