--- a/okteto-pipeline.yml
+++ b/okteto-pipeline.yml
@@ -1,3 +1,3 @@
-icon: https://te.legra.ph/file/acf74e14841d122be2108.jpg
+icon: https://telegra.ph/file/3c0e3363b48b4c3dd76e3.jpg
 deploy:
     - okteto deploy --build -f okteto-stack.yml
