--- a/app.json
+++ b/app.json
@@ -1,16 +1,16 @@
 {
- "name": "Test Bot ",
+ "name": "Telegraph Bot ",
  "repository": "https://github.com/pk-628996/Tgraph",
  "logo": "https://telegra.ph/file/c487058c1c2b6dd439c10.jpg",
  "keywords": ["telegram", "testbot"],
  "env": {
   "BOT_TOKEN": {
       "description": "Your Bot token from @Botfather",
-      "value": "5384496029:AAFr2IMxYpqE9MuGlNLmHlWu4BfTz5kEEIA"
+      "value": ""
    },
    "API_ID": {
       "description": "Your API_ID from https://my.telegram.org/apps . Use your own API ID ",
-      "value": "16217296"
+      "value": ""
    },
    "API_HASH": {
       "description": "Your API_HASH from https://my.telegram.org/apps . Use your own API HASH",
